[package]
name = "gm_data_win"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[features]
test = []#"image"]
textures = []#"image", "sprs"]
sprites = []
font = []

[[bin]]
name = "data_win_test"
path = "src/main.rs"

[dependencies]
nom = "5"
image = {version = "0.22.3"}#, optional = true}
lazy-init = "0.3.0"
