[package]
name = "gm_data_win"
version = "0.2.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2018"

[[bin]]
name = "gm_modding_tool"
path = "src/main.rs"

[dependencies]
nom = "5"
image = { version = "0.22.3" }
lazy-init = "0.3.0"
structopt = "0.3.8"
rayon = "1.3.0"
bimap = "0.4.0"
binrw = "0.5.0"
